# rust-doc-db

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: cli.rs  config.rs  lib.rs  main.rs
src/doc_db/: errors.rs  file_storage.rs  mod.rs  model.rs  sql_storage.rs
src/example_domains/: mod.rs
src/example_domains/admin/: mod.rs  model.rs
src/example_domains/pim/: fake_data_generator.rs  mod.rs  model.rs
tests/: admin_tests.rs  cross_domain_tests.rs  db_operation_tests.rs  pim_tests.rs  test_helpers.rs
