[package]
name = "rust-doc-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_doc_db"
path = "src/main.rs"

[lib]
name = "rust_doc_db"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.5"
glob = "0.3.1"
log = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
simple_logger = "4.2.0"
sqlite = "0.31.0"
thiserror = "1.0.44"
ulid = "1.0.0"

[dev-dependencies]
serial_test = "2.0.0"
